@@ -11,9 +11,10 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
-					<release>11</release>
+					<source>14</source>
+					<target>14</target>
+					<release>14</release>
+					<compilerArgs> --enable-preview </compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
